syntax = "proto3";

package auth;

option go_package = "proto/api;api";

import "google/api/annotations.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/auth/logout"
      body: "*"
    };
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string message = 2;
  string access_token = 3;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  bool status = 1;
  string message = 2;
}