syntax = "proto3";

package user;

option go_package = "proto/api;api";

import "google/api/annotations.proto";

service UserService {
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {
        option (google.api.http) = {
            get: "/users"
        };
    }
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/users/user"
            body: "*"
        };
    }
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/users/user"
            body: "*"
        };
    }
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/users/user/{user_id}"
        };
    }
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    bool status = 1;
    string message = 2;
    repeated User data = 3;
}

message CreateUserRequest {
    uint32 role_id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    bool status = 1;
    string message = 2;
}

message UpdateUserRequest {
    uint32 user_id = 1;
    string name = 2;
}

message UpdateUserResponse {
    bool status = 1;
    string message = 2;
}

message DeleteUserRequest {
    uint32 user_id = 1;
}

message DeleteUserResponse {
    bool status = 1;
    string message = 2;
}

message User {
    uint32 user_id = 1;
    uint32 role_id = 2;
    string role_name = 3;
    string name = 4;
    string email = 5;
    string last_access = 6;
}